# ComfyTasks

./: .gitignore  LICENSE
ComfyTasks/: app.json  package.json
ComfyTasks/app/: _layout.tsx  index.tsx
ComfyTasks/app/(tabs)/: Home.tsx  _layout.tsx
ComfyTasks/ios/: Podfile
ComfyTasks/ios/aitest/: Info.plist
ComfyTasks/ios/aitest.xcodeproj/: project.pbxproj
ComfyTasks/ios/aitest.xcodeproj/xcshareddata/xcschemes/: aitest.xcscheme
ComfyTasks/ios/aitest.xcworkspace/: contents.xcworkspacedata
ComfyyTasks/: .env  app.json  eas.json  package-lock.json  package.json  tsconfig.json
ComfyyTasks/app/: _layout.tsx  index.tsx
ComfyyTasks/app/(auth)/: Phone.tsx  SignIn.tsx  SignUp.tsx  _layout.tsx
ComfyyTasks/app/(tabs)/: Home.tsx  Settings.tsx  _layout.tsx
ComfyyTasks/app/hooks/: auth_hook.tsx
ComfyyTasks/components/: component_styles.tsx  event_modal.tsx  render_week_cal.tsx  task_modal.tsx
ComfyyTasks/ios/: Podfile
ComfyyTasks/ios/ComfyyTasks/: Info.plist
ComfyyTasks/ios/ComfyyTasks.xcodeproj/: project.pbxproj
ComfyyTasks/ios/ComfyyTasks.xcworkspace/: contents.xcworkspacedata
Server/: main.go
Server/main/: Cargo.toml
Server/main/src/: main.rs
Server/main/src/auth/: sign_in.rs
Server/main/src/database/: database.rs  items.csv
Server/main/src/models/: mod.rs
Server/main/src/models/auth_models/: auth.rs  auth_response.rs  mod.rs
Server/main/src/models/todo_models/: app_state.rs  data.rs  data_loader.rs  mod.rs  send.rs  todo_item.rs  user_items.rs
Server/main/src/otp/: mod.rs  send_otp.rs
Server/otp/: go.mod  go.sum  main.go  otp.go
(+1 files in other folders)
